<resources>
    <string name="app_name" translatable="false">Worze</string>
    <string name="codeordecode">\u0020\u0020What do you want to do?\u0020\u0020</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="to_main">To main menu</string>
    <string name="percent" translatable="false">0%</string>
    <string name="loading">Loading...</string>
    <string name="hallo">Hallo,</string>
    <string name="player_name">Player!</string>
    <string name="player_name1">Player</string>
    <string name="addname">Add your name here</string>
    <string name="name_quest">What is your name?</string>
    <string name="ready">Ready!</string>
    <string name="unnorm_word">\u0020\u0020I see a bad word!\u0020\u0020</string>
    <string name="tocode">Code</string>
    <string name="todecoderus">Decrypt(Ru)</string>
    <string name="todecodeeng">Decrypt(Eng)</string>
    <string name="listcode">Code: </string>
    <string name="listsing">Singing: </string>
    <string name="a_rus_code" translatable="false">.-</string>
    <string name="a_rus_sing">dit-daah</string>
    <string name="b_rus_code" translatable="false">-...</string>
    <string name="b_rus_sing">dah-dit-dit-dit</string>
    <string name="ve_rus_code" translatable="false">.-- </string>
    <string name="ve_rus_sing">dit-dah-dah</string>
    <string name="ge_rus_code" translatable="false">--.</string>
    <string name="ge_rus_sing">dah-dah-dit</string>
    <string name="d_rus_code" translatable="false">-.. </string>
    <string name="d_rus_sing">dah-dit-dit</string>
    <string name="e_rus_code" translatable="false">.</string>
    <string name="je_rus_code" translatable="false">...-</string>
    <string name="je_rus_sing">dit-dit-dit-dah</string>
    <string name="ze_rus_code" translatable="false">--..</string>
    <string name="ze_rus_sing">dah-dah-dit-dit</string>
    <string name="i_rus_code" translatable="false">.. </string>
    <string name="i_rus_sing">dit-dit</string>
    <string name="ij_rus_code" translatable="false">.---</string>
    <string name="ij_rus_sing">dit-dah-dah-dah</string>
    <string name="k_rus_code" translatable="false">-.-</string>
    <string name="k_rus_sing">dah-dit-dah</string>
    <string name="el_rus_code" translatable="false">.-..</string>
    <string name="el_rus_sing">dit-dah-dit-dit</string>
    <string name="m_rus_code" translatable="false">--</string>
    <string name="m_rus_sing">dah-dah</string>
    <string name="n_rus_code" translatable="false">-.</string>
    <string name="o_rus_code" translatable="false">---</string>
    <string name="o_rus_sing">dah-dah-dah</string>
    <string name="pe_rus_code" translatable="false">.--.</string>
    <string name="pe_rus_sing">dit-dah-dah-dit</string>
    <string name="er_rus_code" translatable="false">.-.</string>
    <string name="er_rus_sing">dit-dah-dit</string>
    <string name="es_rus_code" translatable="false">...</string>
    <string name="es_rus_sing">dit-dit-dit</string>
    <string name="t_rus_code" translatable="false">-</string>
    <string name="t_rus_sing">dah</string>
    <string name="y_rus_code" translatable="false">..-</string>
    <string name="y_rus_sing">dit-dit-dah</string>
    <string name="f_rus_code" translatable="false">..-.</string>
    <string name="f_rus_sing">dit-dit-dah-dit</string>
    <string name="x_rus_code" translatable="false">....</string>
    <string name="x_rus_sing">dit-dit-dit-dit</string>
    <string name="ce_rus_code" translatable="false">-.-.</string>
    <string name="ce_rus_sing">dah-dit-dah-dit</string>
    <string name="che_rus_code" translatable="false">---.</string>
    <string name="che_rus_sing">dah-dah-dah-dit</string>
    <string name="sha_rus_code" translatable="false">----</string>
    <string name="sha_rus_sing">dah-dah-dah-dah</string>
    <string name="shja_rus_code" translatable="false">--.-</string>
    <string name="shja_rus_sing">dah-dah-dit-dah</string>
    <string name="znaki_rus_code" translatable="false">-..-</string>
    <string name="znaki_rus_sing">dah-dit-dit-dah</string>
    <string name="ji_rus_code" translatable="false">-.--</string>
    <string name="ji_rus_sing">dah-dit-dah-dah</string>
    <string name="ee_rus_code" translatable="false">..-..</string>
    <string name="ee_rus_sing">dit-dit-dah-dit-dit</string>
    <string name="ju_rus_code" translatable="false">..--</string>
    <string name="ju_rus_sing">dit-dit-dah-dah</string>
    <string name="ja_rus_code" translatable="false">.-.-</string>
    <string name="ja_rus_sing">dit-dah-dit-dah</string>
    <string name="ruslet_a" translatable="false">а</string>
    <string name="ruslet_b" translatable="false">б</string>
    <string name="ruslet_v" translatable="false">в</string>
    <string name="ruslet_g" translatable="false">г</string>
    <string name="ruslet_d" translatable="false">д</string>
    <string name="ruslet_e" translatable="false">е</string>
    <string name="ruslet_je" translatable="false">ж</string>
    <string name="ruslet_z" translatable="false">з</string>
    <string name="ruslet_i" translatable="false">и</string>
    <string name="ruslet_ij" translatable="false">й</string>
    <string name="ruslet_k" translatable="false">к</string>
    <string name="ruslet_l" translatable="false">л</string>
    <string name="ruslet_m" translatable="false">м</string>
    <string name="ruslet_n" translatable="false">н</string>
    <string name="ruslet_o" translatable="false">о</string>
    <string name="ruslet_p" translatable="false">п</string>
    <string name="ruslet_r" translatable="false">р</string>
    <string name="ruslet_s" translatable="false">с</string>
    <string name="ruslet_t" translatable="false">т</string>
    <string name="ruslet_y" translatable="false">у</string>
    <string name="ruslet_f" translatable="false">ф</string>
    <string name="ruslet_x" translatable="false">х</string>
    <string name="ruslet_ce" translatable="false">ц</string>
    <string name="ruslet_che" translatable="false">ч</string>
    <string name="ruslet_sha" translatable="false">ш</string>
    <string name="ruslet_shja" translatable="false">щ</string>
    <string name="ruslet_zhaktv" translatable="false">ъ</string>
    <string name="ruslet_ji" translatable="false">ы</string>
    <string name="ruslet_znakm" translatable="false">ь</string>
    <string name="ruslet_ee" translatable="false">э</string>
    <string name="ruslet_ju" translatable="false">ю</string>
    <string name="ruslet_ja" translatable="false">я</string>
    <string name="space" translatable="false">\u0020</string>
    <string name="rus">Rus letters </string>
    <string name="eng">Eng letters</string>
    <string name="symb">Symbols</string>
    <string name="whattotranslate">\u0020\u0020What do you want to encrypt?\u0020\u0020</string>
    <string name="idontknow">\u0020\u0020I cannot encrypt this :(\u0020\u0020\u0020\u0020</string>
    <string name="point">point</string>
    <string name="tire">dash</string>
    <string name="groupsquant">Quantity of groups</string>
    <string name="timing">Delay behind symbols, sec</string>
    <string name="groups_edges" translatable="false">1 - 15</string>
    <string name="delay_edges" translatable="false">1 - 5</string>
    <string name="edges_error">\u0020\u0020Out of edges\u0020\u0020</string>
    <string name="language">Language</string>
    <string name="ruslang">Ru</string>
    <string name="englang">Eng</string>
    <string name="prsent" translatable="false">%</string>
    <string name="eng_alph_w_symbs" translatable="false">abcdefghijklmnopqrstuvwxyz1234567890-+=.,/!@;:?)&amp;+=_$</string>
    <string name="eng_alph" translatable="false">abcdefghijklmnopqrstuvwxyz</string>
    <string name="rus_alph_w_symbs" translatable="false">абвгдежзийклмнопрстуфхцчшщьыэюя1234567890-+=.,/!@;:?)&amp;+=_$</string>
    <string name="rus_alph" translatable="false">абвгдежзийклмнопрстуфхцчшщьыэюя</string>
    <string name="symbnumb">Symbols and numbers</string>
    <string name="error_f">\u0020\u0020Some fields are empty\u0020\u0020</string>
    <string name="where_answ">\u0020\u0020Where is your answer?\u0020\u0020</string>
    <string name="yourMax">Your max </string>
    <string name="you_got">You got</string>
    <string name="comma_sing">dit-dah-dit-dah-dit-dah</string>
    <string name="comma_code" translatable="false">.-.-.-</string>
    <string name="one" translatable="false">.----</string>
    <string name="one_sing">dit-dah-dah-dah-dah</string>
    <string name="two" translatable="false">..---</string>
    <string name="two_sing">dit-dit-dah-dah-dah</string>
    <string name="three" translatable="false">...--</string>
    <string name="three_sing">dit-dit-dit-dah-dah-dah</string>
    <string name="four" translatable="false">....-</string>
    <string name="four_sing">dit-dit-dit-dit-dah</string>
    <string name="five" translatable="false">.....</string>
    <string name="five_sing">dit-dit-dit-dit-dit</string>
    <string name="six" translatable="false">-....</string>
    <string name="six_sing">dah-dit-dit-dit-dit</string>
    <string name="seven" translatable="false">--...</string>
    <string name="seven_sing">dah-dah-dit-dit-dit</string>
    <string name="eight" translatable="false">---..</string>
    <string name="eight_sing">dah-dah-dah-dit-dit</string>
    <string name="nine" translatable="false">----.</string>
    <string name="nine_sing">dah-dah-dah-dah-dit</string>
    <string name="zero" translatable="false">-----</string>
    <string name="zero_sing">dah-dah-dah-dah-dah</string>
    <string name="point_code" translatable="false">......</string>
    <string name="point_sing">dit-dit-dit-dit-dit-dit</string>
    <string name="pointcomma_code" translatable="false">-.-.-.</string>
    <string name="pointcomma_sing">dah-dit-dah-dit-dah-dit</string>
    <string name="doublepoint_code" translatable="false">---...</string>
    <string name="doublepoint_sing">dah-dah-dah-dit-dit-dit</string>
    <string name="questzn_code" translatable="false">..--..</string>
    <string name="questzn_sing">dit-dit-dah-dah-dit-dit</string>
    <string name="brackets_code" translatable="false">-.--.-</string>
    <string name="brackets_sing">dah-dit-dah-dah-dit-dah</string>
    <string name="vosklzn_code" translatable="false">--..--</string>
    <string name="vosklzn_sing">dah-dah-dit-dit-dah-dah</string>
    <string name="tire_code" translatable="false">-....-</string>
    <string name="tire_sing">dah-dit-dit-dit-dit-dah</string>
    <string name="realslash_code" translatable="false">-..-.</string>
    <string name="realslash_sing">dah-dit-dit-dah-dit</string>
    <string name="translate">Translate!</string>
    <string name="alphabet">ALPHABET</string>
    <string name="makecode">ENCRYPT</string>
    <string name="totrain">TRAINING</string>
    <string name="tokey">KEY</string>
    <string name="toexit">EXIT</string>
    <string name="isSound">Sounds</string>
    <string name="slash" translatable="false">/</string>
    <string name="exclam_point" translatable="false">!</string>
    <string name="bracket" translatable="false">)</string>
    <string name="quest_mark" translatable="false">#x3F</string>
    <string name="double_point" translatable="false">:</string>
    <string name="pointcomma" translatable="false">;</string>
    <string name="comma" translatable="false">,</string>
    <string name="point_mark" translatable="false">.</string>
    <string name="zero_mark" translatable="false">0</string>
    <string name="nine_mark" translatable="false">9</string>
    <string name="eight_m" translatable="false">8</string>
    <string name="seven_m" translatable="false">7</string>
    <string name="six_m" translatable="false">6</string>
    <string name="five_m" translatable="false">5</string>
    <string name="four_m" translatable="false">4</string>
    <string name="three_m" translatable="false">3</string>
    <string name="tips">TIPS</string>
</resources>